--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     font-family: sans-serif;
 }
-
+/* section includes text, Factor 1-20, API input, rating scales  */
 section {
     /* padding: 0 100px; */
     background-image: url("images/superbowlbackground.png");
@@ -17,19 +17,55 @@ section {
         
 }
 
-.text {
+.intro, .chiefsapi, .fortyninerapi {
     border: 2px solid black;
     padding: 20px;
     margin: 20px;
-    max-width: 500px;
+    max-width: 40%;
+    max-height: 200px;
     background: rgba(255,255, 255, 0.9);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-    /* display: flex; */
-    /* height: auto; */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.9);
 }
+
 .text h2 {
     margin: 10px;
 }
 .text p {
     margin: 10px;
+}
+
+/* Flex containers in general: includes apiflexcontainer and ratingflexcontainer */
+.flexcontainer {
+    flex-direction: column;
+    min-width: 60%;
+}
+
+/* next three are API flex containers; apiflexcontainer includes chiefapi and fortyninerapi */
+.apiflexcontainer {
+    display: flex;
+    justify-content: center;
+   }
+
+.chiefsapi {
+    width: 100%;
+}
+
+.fortyninerapi {
+    width: 100%;
+}
+
+/* next 2 are user experience rating scales: fivetofive and zerototen */
+
+.ratingflexcontainer {
+    justify-content: center;
+}
+
+.fivetofive, .zerototen {
+    border: 2px solid black;
+    padding: 20px;
+    margin: 20px;
+    width: 90%;
+    max-height: 10px;
+    background: rgba(255,255, 255, 0.9);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.9);
 }
