--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
 
     .wrapper{
         display: grid;
-        grid-template-columns: 4fr 3fr 3fr 3fr;
+        grid-template-columns: 5fr 3fr 3fr 3fr;
         grid-auto-rows: minmax(100px, 400px);
     }
 
@@ -106,4 +106,24 @@ body {
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.9);
     }
 
+    .carousel {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        height: 200px;
+
+    }
+
+
+    /* .carousel, .test {
+        display: grid;
+
+        height: 400px;
+        border: 1px solid gold;
+        padding: 10px; 
+        margin: 5px;
+        background: rgba(255,255, 255, 0.9);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.9);
+    } */
 /*  */
